--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 PARCIALES/
 PARCIALES/
+/OBJETOS-JAVA/Clases2023/ejercicioUno/target/
+/OBJETOS-JAVA/Clases2023/TP_ProyectoAlumnos/build/
+/OBJETOS-JAVA/Clases2023/TP_ProyectoAlumnos/nbproject/private/
+/OBJETOS-JAVA/Clases2023/EjeCuatroEdificio/nbproject/private/
+/OBJETOS-JAVA/Clases2023/EjeCuatroEdificio/build/
+/OBJETOS-JAVA/Clases2023/Practica1/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica1/build/
