--- a/OBJETOS-JAVA/Clases2023/Practica1/nbproject/project.properties
+++ b/OBJETOS-JAVA/Clases2023/Practica1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EjeCuatroEdificio.jar
+dist.jar=${dist.dir}/Practica1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EjeCuatroEdificio
+dist.jlink.output=${dist.jlink.dir}/Practica1
 excludes=
 file.reference.PaqueteLectura.jar=../PaqueteLectura.jar
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EjeCuatroEdificio
+jlink.launcher.name=Practica1
 main.class=ejecuatroedificio.EjeCuatroEdificio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
