--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/EjeCuatroEdificio/build/
 /OBJETOS-JAVA/Clases2023/Practica1/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica1/build/
+/OBJETOS-JAVA/Clases2023/Practica2/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica2/build/
