--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica1/build/
 /OBJETOS-JAVA/Clases2023/Practica2/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica2/build/
+/OBJETOS-JAVA/Clases2023/Practica3/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica3/build/
+/OBJETOS-JAVA/Clases2023/Ejercicio4/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Ejercicio4/build/
+/OBJETOS-JAVA/Clases2023/Practica4/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica4/build/
