--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Ejercicio4/build/
 /OBJETOS-JAVA/Clases2023/Practica4/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica4/build/
+/OBJETOS-JAVA/Clases2023/Ejercicio6/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Ejercicio6/build/
