--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica4/build/
 /OBJETOS-JAVA/Clases2023/Ejercicio6/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Ejercicio6/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/parcial_10_10_23_TF_T1/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/parcial_10_10_23_TF_T1/build/
