--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Ejercicio6/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/parcial_10_10_23_TF_T1/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/parcial_10_10_23_TF_T1/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado6/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado6/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado7/nbproject/private/
