--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado6/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado6/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialEnunciado7/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial_17_10_22_TB_T1/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial_17_10_22_TB_T1/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial_18_03_21/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial_18_03_21/build/
