--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/Parcial_17_10_22_TB_T1/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/Parcial_18_03_21/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/Parcial_18_03_21/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialPsicologo1/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialPsicologo1/build/
