--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/Parcial_18_03_21/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialPsicologo1/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialPsicologo1/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/LibrosElectronicos/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Libreria/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Libreria/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/SistemaEstanterias/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/SistemaEstanterias/build/
