--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/Libreria/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/SistemaEstanterias/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/SistemaEstanterias/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/PracticaMatrices/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/PracticaMatrices/build/
