--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/SistemaEstanterias/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/PracticaMatrices/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/PracticaMatrices/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial2022Alumnos/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Parcial2022Alumnos/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/build/
