--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/Parcial2022Alumnos/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/build/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/nbproject/private/
