--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/build/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/build/
