--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ServicioMeteorologico/build/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/build/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/build/
