--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje1/build/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/build/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje3/nbproject/private/
