--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje2/build/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje3/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/nbproject/private/
+/OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/build/
