--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje3/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/Banco/nbproject/private/
