--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ PARCIALES/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/nbproject/private/
 /OBJETOS-JAVA/Clases2023/Practica5_2024/Practica5eje4/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/Banco/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/Banco/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialK_081024/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialK_081024/build/
