--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/Banco/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialK_081024/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialK_081024/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoE08_10_24/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoE08_10_24/build/
