--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialK_081024/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoE08_10_24/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoE08_10_24/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParciarTurnoCTema1_10_10_23/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParciarTurnoCTema1_10_10_23/build/
