--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoE08_10_24/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParciarTurnoCTema1_10_10_23/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParciarTurnoCTema1_10_10_23/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoHTema1_17_10_23/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoHTema1_17_10_23/build/
