--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParciarTurnoCTema1_10_10_23/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoHTema1_17_10_23/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoHTema1_17_10_23/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/TurnoBTema2_17_10_22/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/TurnoBTema2_17_10_22/build/
