--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoHTema1_17_10_23/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/TurnoBTema2_17_10_22/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/TurnoBTema2_17_10_22/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_10_1023/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_10_1023/build/
