--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/TurnoBTema2_17_10_22/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_10_1023/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_10_1023/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoDTema1_10_10_23/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoDTema1_10_10_23/build/
