--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_10_1023/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoDTema1_10_10_23/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoDTema1_10_10_23/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialAlumnos/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialAlumnos/build/
