--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoDTema1_10_10_23/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialAlumnos/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialAlumnos/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoF_10_10_24/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoF_10_10_24/build/
