--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialAlumnos/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoF_10_10_24/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoF_10_10_24/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoMañanaTema1_06_05_24/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoMañanaTema1_06_05_24/build/
