--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoF_10_10_24/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoMañanaTema1_06_05_24/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoMañanaTema1_06_05_24/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialObjetos17_07_21/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialObjetos17_07_21/build/
