--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoMañanaTema1_06_05_24/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialObjetos17_07_21/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialObjetos17_07_21/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialGNC/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialGNC/build/
