--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialObjetos17_07_21/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialGNC/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialGNC/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/build/
