--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialGNC/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/build/
+/OBJETOS-JAVA/PARCIALES HECHOS/Empresa/nbproject/private/
