--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ PARCIALES/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/nbproject/private/
 /OBJETOS-JAVA/PARCIALES HECHOS/ParcialTurnoATema1_19_10_23/build/
 /OBJETOS-JAVA/PARCIALES HECHOS/Empresa/nbproject/private/
+/OBJETOS-JAVA/PARCIALES HECHOS/ParcialRecu2024/nbproject/private/
